--- a/marineproject 2nd oct/marineproject/templates/matchgame.html
+++ b/marineproject 2nd oct/marineproject/templates/matchgame.html
@@ -3,14 +3,16 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet">
   <script src="{% static 'js/script.js' %}" async></script>
   <title>Match and Learn</title>
 </head>
+
 <body>
   <h1 class="page-title">Match and Learn</h1>
   <div class="overlay-text visible">
@@ -36,99 +38,100 @@
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/bulk ship.png">
+        <img class="tile-value" src="Game1/bulk ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/bulk ship.png">
+        <img class="tile-value" src="Game1/bulk ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/cargo ship.png">
+        <img class="tile-value" src="Game1/cargo ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/cargo ship.png">
+        <img class="tile-value" src="Game1/cargo ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/Electric_ship_icon.png">
+        <img class="tile-value" src="Game1/Electric_ship_icon.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/Electric_ship_icon.png">
+        <img class="tile-value" src="Game1/Electric_ship_icon.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/liquid ship.png">
+        <img class="tile-value" src="Game1/liquid ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/liquid ship.png">
+        <img class="tile-value" src="Game1/liquid ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/ship wheel.png">
+        <img class="tile-value" src="Game1/ship wheel.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/ship wheel.png">
+        <img class="tile-value" src="Game1/ship wheel.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/sunken ship.png">
+        <img class="tile-value" src="Game1/sunken ship.png">
       </div>
     </div>
     <div class="tile">
       <div class="tile-back tile-face">
-        <img class="anchor-logo center" src="static/Images/Game1/Anchorlogo.jpeg">
+        <img class="anchor-logo center" src="Game1/Anchorlogo.jpeg">
       </div>
       <div class="tile-front tile-face">
-        <img class="tile-value" src="static/Images/Game1/sunken ship.png">
+        <img class="tile-value" src="Game1/sunken ship.png">
       </div>
-  </div>
+    </div>
 </body>
+
 </html>
